--- a/pgportfolio/net_config.json
+++ b/pgportfolio/net_config.json
@@ -22,9 +22,9 @@
     "global_period":1800,
     "feature_number":3,
     "test_portion":0.08,
-    "online":false,
+    "online":true,
     "start_date":"2015/07/01",
-    "end_date":"2018/01/07",
+    "end_date":"2018/01/08",
     "volume_average_days":30
   },
 
